# Test_intern

./: README.md
01/: README.md
01/android/app/: build.gradle
01/ios/Runner/: Info.plist
01/lib/: home.dart  main.dart
01/linux/: my_application.cc
01/web/: index.html  manifest.json
bai01/: README.md  pubspec.yaml
bai01/ios/Runner.xcodeproj/: project.pbxproj
bai01/linux/: CMakeLists.txt
bai01/test/: widget_test.dart
bai01/windows/: CMakeLists.txt
bai02/: README.md  pubspec.yaml
bai02/lib/: chessBoard.dart  home.dart  main.dart  square.dart
bai02/linux/: CMakeLists.txt  my_application.cc
bai02/web/: index.html
bai03/: README.md  ffigen.yaml  pubspec.yaml
bai03/android/: build.gradle
bai03/example/: README.md  pubspec.yaml
bai03/ios/: bai03.podspec
bai03/lib/: bai03.dart  bai03_bindings_generated.dart  positio.dart
bai03/linux/: CMakeLists.txt
bai03/macos/: bai03.podspec
bai03/src/: CMakeLists.txt  bai03.c  extends.c  extends.h
bai03/windows/: CMakeLists.txt
bai04/: README.md  ffigen.yaml  pubspec.yaml
bai04 with only Dart/lib/: home.dart  main.dart
bai04/android/: build.gradle
bai04/example/: README.md  pubspec.yaml
bai04/ios/: bai04.podspec
bai04/lib/: bai04.dart  bai04_bindings_generated.dart
bai04/linux/: CMakeLists.txt
bai04/macos/: bai04.podspec
bai04/src/: CMakeLists.txt  bai04.c  bai04.h
bai04/windows/: CMakeLists.txt
bai05/: README.md  pubspec.yaml
bai05/lib/: home.dart  main.dart
bai05/linux/: CMakeLists.txt  my_application.cc
bai05/web/: index.html
bai05/windows/: CMakeLists.txt
(+63 files in other folders)
